# epoch

./: .gitignore  CMakeLists.txt  README.md  setup.py
bins/: CMakeLists.txt
bins/scalar_field/: CMakeLists.txt
bins/scalar_field/src/: common.hpp  domain.hpp  field.hpp  main.cpp  metric.hpp
libs/: .gitignore
scripts/: setup.py
